--- a/bidding/AndroidManifest.xml
+++ b/bidding/AndroidManifest.xml
@@ -41,7 +41,17 @@
             android:launchMode="singleTask"></activity>
 
         <activity
+            android:name=".activity.bid.AddBiddingActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTask"></activity>
+
+        <activity
             android:name=".activity.bid.BiddingListActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTask"></activity>
+
+        <activity
+            android:name=".activity.quote.QuoteListActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"></activity>
 
