--- a/bidding/AndroidManifest.xml
+++ b/bidding/AndroidManifest.xml
@@ -51,6 +51,12 @@
             android:screenOrientation="portrait"></activity>
 
         <activity
+            android:name=".activity.OrderListActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"></activity>
+
+        <activity
             android:name=".activity.bid.BiddingListActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"
