--- a/bidding/AndroidManifest.xml
+++ b/bidding/AndroidManifest.xml
@@ -173,6 +173,8 @@
     <!-- 允许打电话 -->
     <uses-permission android:name="android.permission.CALL_PHONE" />
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION"/>
 
     <!-- Push service 运行需要的权限 -->
     <uses-permission android:name="android.permission.INTERNET" />
